[package]
name = "test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
quick-xml = "0.26.0"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = "0.11.6"
tokio = { version = "1.12.0", features = ["full"] }
